--- a/configuration/picom.conf
+++ b/configuration/picom.conf
@@ -92,6 +92,7 @@ blur-background-fixed = true;
 blur-background-exclude = [
 	"class_g = 'slop'",
 	"class_g = 'Firefox' && argb",
+	"name = 'rofi - Global Search'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 
